--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-port="1689"
-DB_URI="mongodb+srv://harshkc305:YLjipP5pWZmeIBvU@cluster0.mhtl3rf.mongodb.net/studendResume"
+port="port number"
+DB_URI="data base connection uri"
